frontend/resources/public/css/style.landing-page.css
/*
 * Globals
 */

/* Links */
.site-wrapper a,
.site-wrapper a:focus,
.site-wrapper a:hover {
    color: #fff;
}

/* Custom default button */
.site-wrapper .btn-default,
.site-wrapper .btn-default:hover,
.site-wrapper .btn-default:focus {
    color: #333;
    text-shadow: none;
    /* Prevent inheritence from `body` */
    background-color: #fff;
    border: 1px solid #fff;
}


/*
 * Base structure
 */
.site-wrapper {
    height: 100%;
    height: 350px;
    color: #fff;
    text-align: center;
}

.site-wrapper h1,
.site-wrapper .lead {
    color: #fff;
}

/* Use background-size: cover for anything greater than IE8 (IE8 doesn't support this media query) */
@media only screen and (width) {
    .site-wrapper {
        
        background: #060 url(https://shared.tern.org.au/static/img/Hemispherical-Photography.jpg) no-repeat center fixed;
        

        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
    }
}

/* Workaround for background-size: cover in IE8 */
.site-wrapper .ie8-bg {
    min-height: 100%;
    min-width: 1024px;
    width: 100%;
    height: auto;
    position: fixed;
    top: 0;
    left: 0;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper .site-wrapper {
    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA9JREFUeNpiYGBgSAMIMAAAawBnDb5zPgAAAABJRU5ErkJggg==);
    /* IE8 proofing dark colour background overlay */
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    /* For at least Firefox */
    min-height: 100%;
    -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
    box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
}

.site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
    display: inline-block;
}

.cover-container {
    margin-right: auto;
    margin-left: auto;
}

/* Padding for spacing */
.inner {
    padding: 30px;
}


/*
 * Header
 */
.masthead-brand {
    margin-top: 10px;
    margin-bottom: 10px;
}

.masthead-nav>li {
    display: inline-block;
}

.masthead-nav>li+li {
    margin-left: 20px;
}

.masthead-nav>li>a {
    padding-right: 0;
    padding-left: 0;
    font-size: 16px;
    font-weight: bold;
    color: #fff;
    /* IE8 proofing */
    color: rgba(255, 255, 255, .75);
    border-bottom: 2px solid transparent;
}

.masthead-nav>li>a:hover,
.masthead-nav>li>a:focus {
    background-color: transparent;
    border-bottom-color: #a9a9a9;
    border-bottom-color: rgba(255, 255, 255, .25);
}

.masthead-nav>.active>a,
.masthead-nav>.active>a:hover,
.masthead-nav>.active>a:focus {
    color: #fff;
    border-bottom-color: #fff;
}

@media (min-width: 768px) {
    .masthead-brand {
        float: left;
    }

    .masthead-nav {
        float: right;
    }
}


/*
 * Cover
 */

.cover {
    padding: 0 20px;
}

.cover .btn-lg {
    padding: 10px 20px;
    font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
    color: #aaa;
    /* IE8 proofing */
    color: rgba(255, 255, 255, .75);
}


/*
 * Affix and center
 */

/* Handle the widths */
.masthead,
.mastfoot,
.cover-container {
    width: 100%;
    max-width: 700px;
}

@media (min-width: 768px) {

    /* Pull out the header and footer */
    .masthead {
        position: fixed;
        top: 0;
    }

    .mastfoot {
        /*position: fixed;*/
        bottom: 0;
    }

    /* Start the vertical centering */
    .site-wrapper-inner {
        vertical-align: middle;
    }
}

@media (min-width: 992px) {

    .masthead,
    .mastfoot,
    .cover-container {
        width: 700px;
    }
}

